# typora-OS

./: .gitignore  Cargo.toml  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/web/: app.js  index.html  styles.css
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ipc-contracts/: Cargo.toml
crates/ipc-contracts/src/: lib.rs
