[package]
name = "typoraos-desktop"
version = "0.1.0"
edition = "2021"
description = "TyporaOS desktop app shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
ipc-contracts = { path = "../../../crates/ipc-contracts" }
typoraos-core = { path = "../../../crates/core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
